add_executable(cifar10test cifar10test.cpp)
if (OpenCL_FOUND)
    target_link_libraries(cifar10test LINK_PUBLIC Threads::Threads ${HDF5_LIBRARIES} ${OpenCL_LIBRARY} ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
else()
    target_link_libraries(cifar10test LINK_PUBLIC Threads::Threads ${HDF5_LIBRARIES} ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
endif()
