add_executable(mnisttest mnisttest.cpp)
find_package(HDF5 COMPONENTS CXX C HL REQUIRED)
if (HDF5_FOUND)
  include_directories(${HDF5_INCLUDE_DIRS})
  link_directories(${HDF5_LIB_DIRS})
endif (HDF5_FOUND)
if (OpenCL_FOUND)
    target_link_libraries(mnisttest LINK_PUBLIC Threads::Threads ${HDF5_LIBRARIES} ${OpenCL_LIBRARY} ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
else()
    target_link_libraries(mnisttest LINK_PUBLIC Threads::Threads ${HDF5_LIBRARIES} ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
endif()
