add_executable(minitest minitest.cpp)
if (OpenCL_FOUND)
    target_link_libraries(minitest LINK_PUBLIC Threads::Threads ${OpenCL_LIBRARY} ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
else()
    target_link_libraries(minitest LINK_PUBLIC Threads::Threads ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
endif()
